fix: code block in chat not following dark mode and Theater module styles (#1833)
This release fixes a couple of format issues:
- Using "Code" format for enriched text in chat not showing correctly for dark mode. Thanks to Muji-k for finding.
- Theater module scrollbar settings overrides by Twodsix format. Thanks to ZEE for finding.

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -4770,3 +4770,8 @@ section#settings a:hover {
   padding: 0 0.5rem;
 }
 
+code {
+  --color-text-primary: var(--s2d6-select-light);
+  --color-code-bg: var(--color-cool-4);
+  --color-code-border: var(--color-cool-3);
+}
