--- a/static/styles/twodsix_moduleFix.css
+++ b/static/styles/twodsix_moduleFix.css
@@ -448,3 +448,15 @@ div.svelte-ip-m19fn7 {
 .tah-groups {
   flex-direction: row;
 }
+
+/****** Theater Inserts *********/
+.theatre-control-group {
+    flex: 0 0 auto;
+    height: auto;
+    display: flex;
+}
+
+.theatre-narrator-content, .theatre-control-group, .theatre-control-nav-bar, .no-scrollbar {
+  /*--color-scrollbar: transparent;*/
+  --color-scrollbar-track: transparent;
+}
